# Quiz_Generator_FiPL_2026

./: .gitignore  README.md  ci_pipeline.yml  example.py  example1.txt  example2.txt  example_usage.py  pyproject.toml  requirements  requirements.txt  run_generator.py
.github/workflows/: ci_pipeline.yml
core/: document_loader.py  text_processor.py
docs/: ARCHITECTURE.md  README.md
exercises/: base.py  fill_blanks.py  matching.py  synonyms.py  true_false.py  word_order.py  word_vectorizer.py
generators/: exercise_generator.py
src/core/: document_loader.py  text_processor.py  word_vectorizer.py
src/exercises/: base.py  fill_blanks.py  matching.py  synonyms.py  true_false.py  word_order.py
src/formatters/: docx_formatter.py
src/generators/: exercise_generator.py
src/web/: app.py
src/web/templates/: about.html  index.html
tests/: test_base_module.py  test_document_loader.py  test_docx_formatter.py  test_exercise_generator.py  test_fill_blanks_exercise.py  test_synonyms_exercise.py  test_text_processor.py  test_true_false_exercise.py  test_word_order.py  test_word_vectorizer.py
web/: app.py
web/templates/: base.html  index.html
Корпус французских текстов/: Aller au travail à vélo.txt  Au Balcon.txt  Bafta 2026 _ « Une bataille après l’autre » triomphe avec six récompenses, confortant son statut de favori aux Oscars.txt  Baluchon.txt  Batman _ Le Commencement.txt  Cendrillon_(Grimm).txt  En France, les déchets électroniques des entreprises seront recyclés.txt  Expérience de la poupée Bobo.txt  Festival de Cannes 2026 _ Park Chan-wook, réalisateur de « Old Boy », présidera le jury en mai.txt  À 8 ans, elle gagne un Grammy Award !.txt
